layout cadastrar cliente criado

--- a/MKIX/app/src/main/AndroidManifest.xml
+++ b/MKIX/app/src/main/AndroidManifest.xml
@@ -33,20 +33,21 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".MapsActivity"
+            android:name=".UI.Activitys.MapsActivity"
             android:label="@string/title_activity_maps"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".UI.Activitys.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Home">
+        <activity android:name=".UI.Activitys.Home">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity android:name=".UI.Activitys.ClienteActivity" />
     </application>
 
 </manifest>
