--- a/MKIX/app/src/main/AndroidManifest.xml
+++ b/MKIX/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".UI.Activitys.TrabalhadorInfoActivitiy"></activity>
         <activity android:name=".UI.Activitys.TrabalhadoresActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
