--- a/MKIX/app/build.gradle
+++ b/MKIX/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.pchmn:MaterialChipsInput:1.0.8'
+    implementation 'com.android.support:mediarouter-v7:28.0.0'
 
 }
 
